[gd_scene load_steps=117 format=2]

[ext_resource path="res://spr_sprites/f0_debugPlaceholders/place_object1_0003.png" type="Texture" id=1]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/place_object1_0001.png" type="Texture" id=2]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/place_object1_0002.png" type="Texture" id=3]
[ext_resource path="res://scr_scripts/scr_ObjectBase.gd" type="Script" id=4]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/back_to_menu.png" type="Texture" id=5]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0003.png" type="Texture" id=6]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/credits_placeholder.png" type="Texture" id=7]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/game_placeholder.png" type="Texture" id=8]
[ext_resource path="res://spr_sprites/f0_debugPlaceholders/quit_placeholder.png" type="Texture" id=9]
[ext_resource path="res://levels/0_UIother/scn_transitionscreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0005.png" type="Texture" id=11]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0004.png" type="Texture" id=12]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0002.png" type="Texture" id=13]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0003.png" type="Texture" id=14]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0003.png" type="Texture" id=15]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0003.png" type="Texture" id=16]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0001.png" type="Texture" id=17]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0006.png" type="Texture" id=18]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0004.png" type="Texture" id=19]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0006.png" type="Texture" id=20]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0005.png" type="Texture" id=21]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0006.png" type="Texture" id=22]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0004.png" type="Texture" id=23]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0001.png" type="Texture" id=24]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0002.png" type="Texture" id=25]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_blue_beat_0002.png" type="Texture" id=26]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0005.png" type="Texture" id=27]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0001.png" type="Texture" id=28]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0011.png" type="Texture" id=29]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0001.png" type="Texture" id=30]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0007.png" type="Texture" id=31]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0018.png" type="Texture" id=32]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0002.png" type="Texture" id=33]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0017.png" type="Texture" id=34]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0021.png" type="Texture" id=35]
[ext_resource path="res://spr_sprites/spr_other/cactus/sprW_cactus_0001.png" type="Texture" id=36]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0001.png" type="Texture" id=37]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0014.png" type="Texture" id=38]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0004.png" type="Texture" id=39]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0022.png" type="Texture" id=40]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0023.png" type="Texture" id=41]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0008.png" type="Texture" id=42]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0006.png" type="Texture" id=43]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0010.png" type="Texture" id=44]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0003.png" type="Texture" id=45]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0003.png" type="Texture" id=46]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0005.png" type="Texture" id=47]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0024.png" type="Texture" id=48]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0019.png" type="Texture" id=49]
[ext_resource path="res://spr_sprites/spr_other/cactus/sprW_cactus_0003.png" type="Texture" id=50]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0007.png" type="Texture" id=51]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0020.png" type="Texture" id=52]
[ext_resource path="res://spr_sprites/spr_other/cactus/sprW_cactus_0005.png" type="Texture" id=53]
[ext_resource path="res://spr_sprites/spr_other/PC/sprW_PC_0005.png" type="Texture" id=54]
[ext_resource path="res://spr_sprites/spr_other/cactus/sprW_cactus_0004.png" type="Texture" id=55]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0002.png" type="Texture" id=56]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0006.png" type="Texture" id=57]
[ext_resource path="res://spr_sprites/spr_other/cactus/sprW_cactus_0002.png" type="Texture" id=58]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0004.png" type="Texture" id=59]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0012.png" type="Texture" id=60]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0015.png" type="Texture" id=61]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0013.png" type="Texture" id=62]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0009.png" type="Texture" id=63]
[ext_resource path="res://spr_sprites/spr_other/clock/sprW_clock_0016.png" type="Texture" id=64]
[ext_resource path="res://spr_sprites/spr_other/shelf/sprW_shelf_BG.png" type="Texture" id=65]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0023.png" type="Texture" id=66]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0024.png" type="Texture" id=67]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0019.png" type="Texture" id=68]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0022.png" type="Texture" id=69]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0020.png" type="Texture" id=70]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0021.png" type="Texture" id=71]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0018.png" type="Texture" id=72]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0017.png" type="Texture" id=73]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0013.png" type="Texture" id=74]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0003.png" type="Texture" id=75]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0007.png" type="Texture" id=76]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0014.png" type="Texture" id=77]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0015.png" type="Texture" id=78]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0016.png" type="Texture" id=79]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0017.png" type="Texture" id=80]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0018.png" type="Texture" id=81]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0002.png" type="Texture" id=82]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0004.png" type="Texture" id=83]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0008.png" type="Texture" id=84]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0009.png" type="Texture" id=85]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0010.png" type="Texture" id=86]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0011.png" type="Texture" id=87]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0005.png" type="Texture" id=88]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0006.png" type="Texture" id=89]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0012.png" type="Texture" id=90]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0001.png" type="Texture" id=91]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0010.png" type="Texture" id=92]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0011.png" type="Texture" id=93]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0001.png" type="Texture" id=94]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0023.png" type="Texture" id=95]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0009.png" type="Texture" id=96]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0012.png" type="Texture" id=97]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0013.png" type="Texture" id=98]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0014.png" type="Texture" id=99]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0015.png" type="Texture" id=100]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0016.png" type="Texture" id=101]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0022.png" type="Texture" id=102]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0006.png" type="Texture" id=103]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0003.png" type="Texture" id=104]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0004.png" type="Texture" id=105]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0020.png" type="Texture" id=106]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0019.png" type="Texture" id=107]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0021.png" type="Texture" id=108]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_window_0024.png" type="Texture" id=109]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0007.png" type="Texture" id=110]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0005.png" type="Texture" id=111]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0002.png" type="Texture" id=112]
[ext_resource path="res://spr_sprites/spr_other/sprLV1_window/sprW_rain_0008.png" type="Texture" id=113]
[ext_resource path="res://spr_sprites/spr_cursor/empty.png" type="Texture" id=114]

[sub_resource type="CircleShape2D" id=1]
radius = 20.1517

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 114 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "menu",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "quit",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "credit",
"speed": 5.0
}, {
"frames": [ ExtResource( 94 ), ExtResource( 112 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 111 ), ExtResource( 103 ), ExtResource( 110 ), ExtResource( 113 ), ExtResource( 96 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 73 ), ExtResource( 72 ), ExtResource( 68 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 69 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "rain",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 58 ), ExtResource( 50 ), ExtResource( 55 ), ExtResource( 53 ) ],
"loop": true,
"name": "cactus",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 27 ), ExtResource( 20 ) ],
"loop": false,
"name": "heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 82 ), ExtResource( 75 ), ExtResource( 83 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 76 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 90 ), ExtResource( 74 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 107 ), ExtResource( 106 ), ExtResource( 108 ), ExtResource( 102 ), ExtResource( 95 ), ExtResource( 109 ) ],
"loop": true,
"name": "window",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 33 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 54 ), ExtResource( 43 ), ExtResource( 31 ) ],
"loop": false,
"name": "pc",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "backtomenu",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 26 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "heart 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 18 ) ],
"loop": true,
"name": "heart_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 65 ) ],
"loop": true,
"name": "shelf",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 56 ), ExtResource( 46 ), ExtResource( 59 ), ExtResource( 47 ), ExtResource( 57 ), ExtResource( 51 ), ExtResource( 42 ), ExtResource( 63 ), ExtResource( 44 ), ExtResource( 29 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 38 ), ExtResource( 61 ), ExtResource( 64 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 48 ) ],
"loop": false,
"name": "wolf_clock",
"speed": 12.0
} ]

[node name="ObjectBase" type="Area2D"]
script = ExtResource( 4 )
default_noise = "res://spr_sprites/f0_debugPlaceholders/sfx_test01.wav"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sfx2D_object" type="AudioStreamPlayer2D" parent="."]

[node name="sfx2D_distorted" type="AudioStreamPlayer2D" parent="."]
attenuation = 0.0426888

[node name="sfx_discovered" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "empty"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TransitionScreen" parent="." instance=ExtResource( 10 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
